the final task of the 12th sprint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-logging.level.org.zalando.logbook= TRACE
+#??? ??????????? HTTP-???????? ? ??????? OFF, ERROR, WARN, INFO, DEBUG, TRACE
+logging.level.org.zalando.logbook=OFF
+
+#??? ??????????? ??? SQL-???????
+logging.level.org.springframework.jdbc.core.JdbcTemplate=OFF
+
+#??? ???????rb HTTP-????????
+logging.level.org.springframework.web=OFF
+
+#?????????? ????????? ??? ?????? filmorate
+logging.level.ru.yandex.practicum.filmorate=INFO
+
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+#spring.datasource.url=jdbc:h2:mem:filmorate;TRACE_LEVEL_FILE=2
+spring.datasource.username=filmorate
+spring.datasource.password=filmorate
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
