--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-#??? ??????????? HTTP-???????? ? ??????? OFF, ERROR, WARN, INFO, DEBUG, TRACE
-logging.level.org.zalando.logbook=OFF
-
-#??? ??????????? ??? SQL-???????
-logging.level.org.springframework.jdbc.core.JdbcTemplate=OFF
-
-#??? ???????rb HTTP-????????
-logging.level.org.springframework.web=OFF
-
-#?????????? ????????? ??? ?????? filmorate
-logging.level.ru.yandex.practicum.filmorate=INFO
+#OFF, ERROR, WARN, INFO, DEBUG, TRACE
+logging.level.org.zalando.logbook=TRACE
+logging.level.org.springframework.jdbc.core.JdbcTemplate=TRACE
+logging.level.org.springframework.web=TRACE
+logging.level.ru.yandex.practicum.filmorate=TRACE
 
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./db/filmorate
